Initial Source code

--- a/GeometricalMMORPG/GeometricalMMORPG/GeometricalMMORPG.vcxproj
+++ b/GeometricalMMORPG/GeometricalMMORPG/GeometricalMMORPG.vcxproj
@@ -44,9 +44,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>Z:\Documents\Visual Studio 2013\Projects\Libraries\SDL2_mixer-2.0.0\include;Z:\Documents\Visual Studio 2013\Projects\Libraries\SDL2_image-2.0.0\include;Z:\Documents\Visual Studio 2013\Projects\Libraries\SDL2-2.0.3\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>Z:\Documents\Visual Studio 2013\Projects\Libraries\SDL2_mixer-2.0.0\lib\x86;Z:\Documents\Visual Studio 2013\Projects\Libraries\SDL2_image-2.0.0\lib\x86;Z:\Documents\Visual Studio 2013\Projects\Libraries\SDL2-2.0.3\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -64,11 +68,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="main.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Artist.cpp" />
-    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
