--- a/GeometricalMMORPG/GeometricalMMORPG/GeometricalMMORPG.vcxproj.filters
+++ b/GeometricalMMORPG/GeometricalMMORPG/GeometricalMMORPG.vcxproj.filters
@@ -21,13 +21,16 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Artist.cpp">
       <Filter>Source Files\Gfx</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
