--- a/GeometricalMMORPG/GeometricalMMORPG/GeometricalMMORPG.vcxproj.filters
+++ b/GeometricalMMORPG/GeometricalMMORPG/GeometricalMMORPG.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClInclude Include="main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Artist.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Artist.cpp">
