Fixes syntax and improver artist.

--- a/GeometricalMMORPG/GeometricalMMORPG/GeometricalMMORPG.vcxproj.filters
+++ b/GeometricalMMORPG/GeometricalMMORPG/GeometricalMMORPG.vcxproj.filters
@@ -21,13 +21,10 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="main.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Utils.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Artist.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Frame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -37,6 +34,9 @@
     </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Frame.cpp">
+      <Filter>Source Files\Gfx</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
