--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,4 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+GeometricalMMORPG/GeometricalMMORPG/GeometricalMMORPG.vcxproj
